--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.7.1",
     "bulmaswatch": "^0.7.1",
     "vue": "^2.4.2",
+    "vue-fontawesome": "0.0.2",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
