--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "William Fortin <willyfortin@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "dev": "nodemon build/dev-server.js",
+    "start": "nodemon build/dev-server.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "bulma-tooltip": "^2.0.2",
     "bulmaswatch": "^0.7.1",
     "js-cookie": "^2.2.0",
+    "nodemon": "^1.18.7",
     "vue": "^2.4.2",
     "vue-fontawesome": "0.0.2",
     "vue-router": "^2.7.0"
