--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.18.7",
     "vue": "^2.4.2",
     "vue-fontawesome": "0.0.2",
+    "vue-gravatar": "^1.3.0",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
