--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.4.2",
     "vue-fontawesome": "0.0.2",
     "vue-gravatar": "^1.3.0",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-spinner": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
