--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bulmaswatch": "^0.7.1",
     "js-cookie": "^2.2.0",
     "nodemon": "^1.18.7",
+    "uuid-token-generator": "^1.0.0",
     "vue": "^2.4.2",
     "vue-fontawesome": "0.0.2",
     "vue-gravatar": "^1.3.0",
